Fix double vertical scrollbars

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,7 @@
   }
 
   body {
-    @apply overflow-x-hidden;
+    @apply overflow-x-hidden overflow-y-hidden;
   }
 
   /* ===============
